testdata/errors/missing_register_size.ral
config { }

register foo: { a: 32 }
